Remove the scala dependency
Use directly the sbt image. The scala is downloading during the build with the version defined in the sbt settings file.